packages/libs/error-stack/tests/snapshots/test_serialize__sources_nested@spantrace-backtrace.snap
---
source: tests/test_serialize.rs
expression: report
---
[
  {
    "context": "context A",
    "attachments": [
      {
        "file": "tests/common/snapshots.rs",
        "line": 207,
        "column": 10
      },
      "2",
      "1"
    ],
    "sources": [
      {
        "context": "context A",
        "attachments": [
          {
            "file": "tests/common/snapshots.rs",
            "line": 201,
            "column": 10
          },
          "4",
          "3"
        ],
        "sources": [
          {
            "context": "root error",
            "attachments": [
              {
                "file": "tests/common/mod.rs",
                "line": 4,
                "column": 5
              },
              "backtrace (1)",
              {
                "spans": [
                  {
                    "fields": [],
                    "level": "INFO",
                    "name": "func_b",
                    "target": "test_serialize::common::snapshots",
                    "module_path": "test_serialize::common::snapshots",
                    "file": "tests/common/snapshots.rs",
                    "line": 73,
                    "type": "span"
                  },
                  {
                    "fields": [],
                    "level": "INFO",
                    "name": "func_a",
                    "target": "test_serialize::common::snapshots",
                    "module_path": "test_serialize::common::snapshots",
                    "file": "tests/common/snapshots.rs",
                    "line": 78,
                    "type": "span"
                  }
                ]
              },
              "6"
            ],
            "sources": []
          }
        ]
      },
      {
        "context": "context A",
        "attachments": [
          {
            "file": "tests/common/snapshots.rs",
            "line": 196,
            "column": 10
          },
          "5",
          "3"
        ],
        "sources": [
          {
            "context": "context A",
            "attachments": [
              {
                "file": "tests/common/snapshots.rs",
                "line": 194,
                "column": 10
              },
              "7"
            ],
            "sources": [
              {
                "context": "context A",
                "attachments": [
                  {
                    "file": "tests/common/snapshots.rs",
                    "line": 185,
                    "column": 34
                  },
                  "9",
                  "8"
                ],
                "sources": [
                  {
                    "context": "root error",
                    "attachments": [
                      {
                        "file": "tests/common/mod.rs",
                        "line": 4,
                        "column": 5
                      },
                      "backtrace (1)",
                      {
                        "spans": [
                          {
                            "fields": [],
                            "level": "INFO",
                            "name": "func_b",
                            "target": "test_serialize::common::snapshots",
                            "module_path": "test_serialize::common::snapshots",
                            "file": "tests/common/snapshots.rs",
                            "line": 73,
                            "type": "span"
                          },
                          {
                            "fields": [],
                            "level": "INFO",
                            "name": "func_a",
                            "target": "test_serialize::common::snapshots",
                            "module_path": "test_serialize::common::snapshots",
                            "file": "tests/common/snapshots.rs",
                            "line": 78,
                            "type": "span"
                          }
                        ]
                      }
                    ],
                    "sources": []
                  }
                ]
              },
              {
                "context": "context A",
                "attachments": [
                  {
                    "file": "tests/common/snapshots.rs",
                    "line": 179,
                    "column": 10
                  },
                  "13",
                  "10",
                  "16",
                  "9",
                  "8"
                ],
                "sources": [
                  {
                    "context": "root error",
                    "attachments": [
                      {
                        "file": "tests/common/mod.rs",
                        "line": 4,
                        "column": 5
                      },
                      "backtrace (1)",
                      {
                        "spans": [
                          {
                            "fields": [],
                            "level": "INFO",
                            "name": "func_b",
                            "target": "test_serialize::common::snapshots",
                            "module_path": "test_serialize::common::snapshots",
                            "file": "tests/common/snapshots.rs",
                            "line": 73,
                            "type": "span"
                          },
                          {
                            "fields": [],
                            "level": "INFO",
                            "name": "func_a",
                            "target": "test_serialize::common::snapshots",
                            "module_path": "test_serialize::common::snapshots",
                            "file": "tests/common/snapshots.rs",
                            "line": 78,
                            "type": "span"
                          }
                        ]
                      }
                    ],
                    "sources": []
                  }
                ]
              },
              {
                "context": "context A",
                "attachments": [
                  {
                    "file": "tests/common/snapshots.rs",
                    "line": 165,
                    "column": 10
                  },
                  "15",
                  "14",
                  "10",
                  "16",
                  "9",
                  "8"
                ],
                "sources": [
                  {
                    "context": "root error",
                    "attachments": [
                      {
                        "file": "tests/common/mod.rs",
                        "line": 4,
                        "column": 5
                      },
                      "backtrace (1)",
                      {
                        "spans": [
                          {
                            "fields": [],
                            "level": "INFO",
                            "name": "func_b",
                            "target": "test_serialize::common::snapshots",
                            "module_path": "test_serialize::common::snapshots",
                            "file": "tests/common/snapshots.rs",
                            "line": 73,
                            "type": "span"
                          },
                          {
                            "fields": [],
                            "level": "INFO",
                            "name": "func_a",
                            "target": "test_serialize::common::snapshots",
                            "module_path": "test_serialize::common::snapshots",
                            "file": "tests/common/snapshots.rs",
                            "line": 78,
                            "type": "span"
                          }
                        ]
                      }
                    ],
                    "sources": []
                  }
                ]
              },
              {
                "context": "context A",
                "attachments": [
                  {
                    "file": "tests/common/snapshots.rs",
                    "line": 175,
                    "column": 10
                  },
                  "11",
                  "9",
                  "8"
                ],
                "sources": [
                  {
                    "context": "root error",
                    "attachments": [
                      {
                        "file": "tests/common/mod.rs",
                        "line": 4,
                        "column": 5
                      },
                      "backtrace (1)",
                      {
                        "spans": [
                          {
                            "fields": [],
                            "level": "INFO",
                            "name": "func_b",
                            "target": "test_serialize::common::snapshots",
                            "module_path": "test_serialize::common::snapshots",
                            "file": "tests/common/snapshots.rs",
                            "line": 73,
                            "type": "span"
                          },
                          {
                            "fields": [],
                            "level": "INFO",
                            "name": "func_a",
                            "target": "test_serialize::common::snapshots",
                            "module_path": "test_serialize::common::snapshots",
                            "file": "tests/common/snapshots.rs",
                            "line": 78,
                            "type": "span"
                          }
                        ]
                      }
                    ],
                    "sources": []
                  }
                ]
              },
              {
                "context": "context A",
                "attachments": [
                  {
                    "file": "tests/common/snapshots.rs",
                    "line": 171,
                    "column": 10
                  },
                  "12",
                  "9",
                  "8"
                ],
                "sources": [
                  {
                    "context": "context A",
                    "attachments": [
                      {
                        "file": "tests/common/snapshots.rs",
                        "line": 170,
                        "column": 10
                      }
                    ],
                    "sources": [
                      {
                        "context": "root error",
                        "attachments": [
                          {
                            "file": "tests/common/mod.rs",
                            "line": 4,
                            "column": 5
                          },
                          "backtrace (1)",
                          {
                            "spans": [
                              {
                                "fields": [],
                                "level": "INFO",
                                "name": "func_b",
                                "target": "test_serialize::common::snapshots",
                                "module_path": "test_serialize::common::snapshots",
                                "file": "tests/common/snapshots.rs",
                                "line": 73,
                                "type": "span"
                              },
                              {
                                "fields": [],
                                "level": "INFO",
                                "name": "func_a",
                                "target": "test_serialize::common::snapshots",
                                "module_path": "test_serialize::common::snapshots",
                                "file": "tests/common/snapshots.rs",
                                "line": 78,
                                "type": "span"
                              }
                            ]
                          }
                        ],
                        "sources": []
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
]
